[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypassgen"
description = "A simple password generator tool with various functions, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.0.1"
authors = [
  { name="Darren Le", email="qal207@nyu.edu" },
  { name="Daniel Atlas", email="" },
  { name="Vincent Xu", email="" },
  { name="Elyazya Al Kobaisi", email="" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "password", "generator"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-9"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-9.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-9/issues"

[project.scripts]
wisdom = "wisdom.__main__:main"