[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypassgenNYU"
description = "A simple password generator tool with various functions, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "1.0.0"
authors = [
  { name="Darren Le", github="https://github.com/DarrenLe20" },
  { name="Daniel Atlas", github="https://github.com/Spectraorder" },
  { name="Vincent Xu", github="https://github.com/yx-xyc" },
  { name="Elyazya Al Kobaisi", github="https://github.com/elyazya" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "password", "generator"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-9"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-9.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-9/issues"

[project.scripts]
passwordpack = "passwordpack.__main__:main"